# RfCgraTrans

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
RF_CGRAMap/: CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  cmake_install.cmake  install_manifest.txt  main.cpp  run.sh
RF_CGRAMap/data/: test.txt
RF_CGRAMap/include/: CGRA.h  DFG.h  GraphRegister.h  Path.h  Register.h  config.h  tool.h
RF_CGRAMap/src/: CGRA.cpp  DFG.cpp  GraphRegister.cpp  Path.cpp  Register.cpp  tool.cpp
RF_DATE/: CGRA.cpp  CGRA.h  DFG.cpp  DFG.h  GraphRegister.cpp  GraphRegister.h  Register.cpp  Register.h  build.sh  config.h  core  main.cpp  mcq  rf_tcad  run.sh  tool.cpp  tool.h
RF_DATE/data/: test.txt
cmake/: RF_CGRAMap.cmake  glpk.cmake
example/: run.sh
example/2mm/: 2mm.RfCgraTrans.out.mlir  2mm.RfCgraTrans0.cloog  2mm.RfCgraTrans1.cloog  2mm.RfCgraTrans2.cloog  2mm.RfCgraTrans300.cloog  2mm.RfCgraTrans5.cloog  2mm.RfCgraTransFinal.cloog  2mm.c  2mm.h  DFGInformation.out  MapInformation.out  Schedule0_solu0.out  Schedule0_solu10.out  Schedule0_solu11.out  Schedule0_solu12.out  Schedule0_solu13.out  Schedule0_solu15.out  Schedule0_solu16.out  Schedule0_solu17.out  Schedule0_solu18.out  Schedule0_solu19.out  Schedule0_solu20.out  Schedule0_solu21.out  Schedule0_solu22.out  Schedule0_solu23.out  Schedule0_solu24.out  Schedule0_solu25.out  Schedule0_solu26.out  Schedule0_solu27.out  Schedule0_solu28.out  Schedule0_solu29.out  Schedule0_solu30.out  Schedule0_solu31.out  Schedule0_solu33.out  Schedule0_solu34.out  Schedule0_solu35.out  Schedule0_solu36.out  Schedule0_solu38.out  Schedule0_solu39.out  Schedule0_solu41.out  (+88 more)
example/3mm/: 3mm.RfCgraTrans.out.mlir  3mm.RfCgraTrans0.cloog  3mm.RfCgraTrans1.cloog  3mm.c  (+116 more)
glpk/: Makefile  Makefile.in  aclocal.m4  config.h  config.status  configure  libtool
lib/Support/: CMakeLists.txt  OslScop.cc  OslScopStmtOpSet.cc  OslSymbolTable.cc  ScatteringUtils.cc  ScopStmt.cc
pluto/: .outfilename  .srcfilename  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  getversion.sh  libtool  polycc  polycc.sh  test.sh  test_tmp_out.pluto.c  test_tmp_out.pluto.pluto.cloog
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
tools/: CMakeLists.txt
tools/RfCgraTrans-opt/: CMakeLists.txt  RfCgraTrans-opt.cc
tools/RfCgraTrans-translate/: CMakeLists.txt  RfCgraTrans-translate.cc
(+2545 files in other folders)
